[package]
name = "supernote-tool-rs"
version = "1.0.1"
edition = "2021"
cdescription = "A Rust-based GUI application designed to work with Supernote A5X files. It provides a streamlined way to render and export Supernote files to vector PDFs, adding features such as a Table of Contents (ToC) and link support."

[package.metadata.bundle]
name = "Supernote Tool Rust"
identifier = "io.github.mateo0023.supernote-tool-rs"
icon = ["./icons/64x64.png", "./icons/128x128.png", "./icons/256x256@2x.png"]

[[bench]]
name = "library_benchmark"
harness = false

[profile.bench]
debug = true
strip = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
eframe = "0.28.1"
egui = "0.28.1"
image = "0.25.2"
libc = "0.2.158"
lopdf = "0.34.0"
regex = "1.10.3"
rfd = "0.15.0"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"

[build-dependencies]
bindgen = "0.70.1"
