[package]
name = "supernote-tool-rs"
version = "2.1.3-b"
edition = "2021"
cdescription = "A Rust-based application designed to work with Supernote A5X files. It provides a streamlined way to render and export Supernote files to vector PDFs, adding features such as a Table of Contents (ToC) and link support."

[package.metadata.bundle]
name = "Supernote Tool"
identifier = "io.github.mateo0023.supernote-tool"
icon = ["./icons/64x64.png", "./icons/128x128.png", "./icons/256x256@2x.png", "./icons/icon.ico", "./icons/icon.icns"]

[features]
# The default list of features
default = ["gui"]
# The dependencies needed by the GUI.
gui = ["dep:egui", "dep:eframe", "dep:rfd", "dep:image", "dep:directories", "dep:muda", "dep:raw-window-handle"]

[[bench]]
name = "library_benchmark"
harness = false

[profile.bench]
debug = true
strip = false

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Optional deps needed by the UI
eframe = {version = "0.28.1", optional = true}
egui = {version = "0.28.1", features = ["persistence"], optional = true}
rfd = {version = "0.15.0", optional = true}
image = {version = "0.25.2", optional = true}
directories = {version = "5.0.1", optional = true}
muda = {version = "0.15.3", optional = true}
raw-window-handle = {version = "0.6.2", optional = true}
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
libc = "0.2.158"
lopdf = "0.34.0"
regex = "1.10.3"
reqwest = "0.12.8"
serde = {version = "1.0.195", features = ["derive"]}
serde_json = "1.0.111"
sha2 = "0.10.8"
tokio = {version = "1.40.0", features = ["full"]}
# Only used in the Command Line (not "gui")
clap = { version = "4.5.20", features = ["derive"] }

[build-dependencies]
bindgen = "0.70.1"
winresource = "*"
